--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,21 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: CI Test
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - '**'   # runs on all branches
   pull_request:
-    branches: [ main ]
 
 jobs:
-  Explore-GitHub-Actions:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Print repo info
+      - name: Run test commands
         run: |
-          echo "Repository: $GITHUB_REPOSITORY"
-          echo "Triggered by: $GITHUB_ACTOR"
-          echo "Event: $GITHUB_EVENT_NAME"
-
-      - name: List files (confirm repository contents)
-        run: ls -la
-
-      - name: Validate that student files exist (simple check)
-        run: |
-          if ls *_gb.txt *_devops.txt *_sdlc.txt 1> /dev/null 2>&1; then
-            echo "Required student files found."
-          else
-            echo "One or more required student files missing." && exit 1
-          fi
+          echo " GitHub Actions is working!"
+          echo " Files in repo:"
+          ls -la
